# password-manager

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README  README.md  main.py  manage.py  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json  urls.py  views.py
frontend/src/: index.js
frontend/src/components/: AlertDialog.js  AppNavBar.js  CreateWebsitePassword.js  HeroBanner.js  Login.js  SignUp.js  WebsitePasswordDetail.js  WebsitePasswordList.js
frontend/src/utils/: auth.js  axiosConfig.js
frontend/templates/frontend/: index.html
passwordmanager/: asgi.py  settings.py  urls.py  wsgi.py
src/passwordmanager/: Dockerfile  app.yaml  deploy-instructions.txt  fly.toml  main.py  manage.py  requirements.txt
src/passwordmanager/accounts/: forms.py  serializers.py  views.py
src/passwordmanager/frontend/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
src/passwordmanager/frontend/src/components/: AlertDialog.js  App.js  AppNavBar.js  CreateWebsitePassword.js  HeroBanner.js  HomePage.js  ImageButtonLock.js  Login.js  Navbar.js  SignUp.js  WebsitePasswordCard.js  WebsitePasswordDetail.js  WebsitePasswordList.js
src/passwordmanager/frontend/static/css/: Navbar.css  index.css  styles.css
src/passwordmanager/frontend/static/frontend/: main.js  main.js.LICENSE.txt
src/passwordmanager/frontend/templates/frontend/: index.html
src/passwordmanager/pages/: urls.py  views.py
src/passwordmanager/passwordmanager/: settings.py  urls.py  utils.py
src/passwordmanager/templates/: about.html  base.html
src/passwordmanager/templates/registration/: login.html
src/passwordmanager/websitePasswords/: admin.py  encryption.py  forms.py  models.py  serializers.py  urls.py  views.py
src/passwordmanager/websitePasswords/migrations/: 0001_initial.py  0002_auto_20210131_2244.py  0003_auto_20210204_2258.py  0004_auto_20210204_2333.py  0005_auto_20210205_1210.py  0006_auto_20210210_2307.py
src/passwordmanager/websitePasswords/templates/: websitePassword_create.html  websitepassword_detail.html  websitepassword_list.html
websitePasswords/: apps.py  encryption.py  models.py  serializers.py  urls.py  views.py
website_passwords/: apps.py  serializers.py  urls.py
website_passwords/migrations/: 0001_initial.py
