[project]
name = "passwordmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ruff",
  "asgiref",
  "cffi",
  "cryptography",
  "Django",
  "django-cors-headers",
  "djangorestframework",
  "djangorestframework-jwt",
  "pycparser",
  "PyJWT",
  "PyMySQL",
  "pytz",
  "six",
  "sqlparse",
  "gunicorn",
  "whitenoise",
  "dj-database-url",
]

[tool.ruff]
# Enable specific rule categories
lint.select = ["B", "C", "E", "F", "W", "B9"]
lint.ignore = ["E203", "E266", "E501", "F403", "F401"]

# Maximum line length
line-length = 88

# Exclude certain directories
exclude = ["build", "dist", ".venv"]

# Fix issues automatically
fix = true

# Show a preview of fixes without applying them
preview = false
